fix alignment refs #23461

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -35,6 +35,7 @@
         white-space: nowrap;
         text-overflow: ellipsis;
         overflow: hidden;
+        vertical-align: middle;
     }
 }
 @media (max-width: 440px) {
